Добавил якоря к карточкам в блоке "Об играх"

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="about__games">
                 <div class="about__games-box">
-                    <a class="about__link" href="#">
+                    <a class="about__link" href="#gameOne">
                         <article class="about__game">
                             <img class="about__img" src="./img/Game1.jpg" alt="Game №1">
                             <div class="about__text-box">
@@ -58,7 +58,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="about__link" href="#">
+                    <a class="about__link" href="#gameFour">
                         <article class="about__game">
                             <img class="about__img" src="./img/Game4.jpg" alt="Game №4">
                             <div class="about__text-box">
@@ -69,7 +69,7 @@
                     </a>
                 </div>
                 <div class="about__games-box">
-                    <a class="about__link" href="#">
+                    <a class="about__link" href="#gameTwo">
                         <article class="about__game">
                             <img class="about__img" src="./img/Game2.jpg" alt="Game №2">
                             <div class="about__text-box">
@@ -78,7 +78,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="about__link" href="#">
+                    <a class="about__link" href="#gameFive">
                         <article class="about__game">
                             <img class="about__img" src="./img/Game5.jpg" alt="Game №5">
                             <div class="about__text-box">
@@ -89,7 +89,7 @@
                     </a>
                 </div>
                 <div class="about__games-box about__games-box_tablet">
-                    <a class="about__link" href="#">
+                    <a class="about__link" href="#gameThree">
                         <article class="about__game">
                             <img class="about__img" src="./img/Game3.jpg" alt="Game №3">
                             <div class="about__text-box">
@@ -98,7 +98,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="about__link" href="#">
+                    <a class="about__link" href="#gameSix">
                         <article class="about__game">
                             <img class="about__img" src="./img/Game6.jpg" alt="Game №6">
                             <div class="about__text-box">
@@ -117,7 +117,7 @@
         <section class="mini-games">
             <h2 class="mini-games__main-title">Мини-игры</h2>
             <div class="mini-games__games">
-                <article class="mini-games__game mini-games__game_rev">
+                <article id="gameOne" class="mini-games__game mini-games__game_rev">
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Угадай число</h3>
                         <p class="mini-games__text">Попробуй угадать случайное число от 1 до 100.</p>
@@ -125,7 +125,7 @@
                     </div>
                     <img class="mini-games__img" src="./img/Game1.jpg" alt="Угадай число">
                 </article>
-                <article class="mini-games__game">
+                <article id="gameTwo" class="mini-games__game">
                     <img class="mini-games__img" src="./img/Game2.jpg" alt="Простая арифметика">
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Простая арифметика</h3>
@@ -133,7 +133,7 @@
                         <button class="mini-games__btn">Играть!</button>
                     </div>
                 </article>
-                <article class="mini-games__game mini-games__game_rev">
+                <article id="gameThree" class="mini-games__game mini-games__game_rev">
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Переверни текст</h3>
                         <p class="mini-games__text">Попробуй ввести текст, который будет перевернут.</p>
@@ -141,7 +141,7 @@
                     </div>
                     <img class="mini-games__img" src="./img/Game3.jpg" alt="Переверни текст">
                 </article>
-                <article class="mini-games__game">
+                <article id="gameFour" class="mini-games__game">
                     <img class="mini-games__img" src="./img/Game4.jpg" alt="Викторина">
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Викторина</h3>
@@ -149,7 +149,7 @@
                         <button class="mini-games__btn">Играть!</button>
                     </div>
                 </article>
-                <article class="mini-games__game mini-games__game_rev">
+                <article id="gameFive" class="mini-games__game mini-games__game_rev">
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Камень, ножницы, бумага</h3>
                         <p class="mini-games__text">Сыграй в популярную игру против компьютера.</p>
@@ -157,7 +157,7 @@
                     </div>
                     <img class="mini-games__img" src="./img/Game5.jpg" alt="Камень, ножницы, бумага">
                 </article>
-                <article class="mini-games__game">
+                <article id="gameSix" class="mini-games__game">
                     <img class="mini-games__img" src="./img/Game6.jpg" alt="Генератор случайных цветов">
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Генератор случайных цветов</h3>
