Задание номер 3 по JS

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
     </footer>
 
     <!-- <script src="./js/hw-N1.js"></script> -->
-    <script src="./js/hw-N2.js"></script>    
+    <!-- <script src="./js/hw-N2.js"></script> -->
+    <script src="./js/hw-N3.js"></script>
 </body>
 </html>
