Сделал 5-ю домашку по JS и реализовал функционал к первой игре

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Угадай число</h3>
                         <p class="mini-games__text">Попробуй угадать случайное число от 1 до 100.</p>
-                        <button class="mini-games__btn">Играть!</button>
+                        <button class="mini-games__btn" onclick="guessNum()">Играть!</button>
                     </div>
                     <img class="mini-games__img" src="./img/Game1.jpg" alt="Угадай число">
                 </article>
@@ -177,6 +177,8 @@
 
     <!-- <script src="./js/hw-N1.js"></script> -->
     <!-- <script src="./js/hw-N2.js"></script> -->
-    <script src="./js/hw-N3.js"></script>
+    <!-- <script src="./js/hw-N3.js"></script> -->
+    <script src="./js/hw-N4.js"></script>
+    <script src="./js/guessNum.js"></script>
 </body>
 </html>
