Выполнена вторая игра в js и 15 заданий по массивам

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Простая арифметика</h3>
                         <p class="mini-games__text">Попробуй решить простые арифметические задачи.</p>
-                        <button class="mini-games__btn">Играть!</button>
+                        <button class="mini-games__btn" onclick="simpleArithmetic()">Играть!</button>
                     </div>
                 </article>
                 <article id="gameThree" class="mini-games__game mini-games__game_rev">
@@ -178,7 +178,9 @@
     <!-- <script src="./js/hw-N1.js"></script> -->
     <!-- <script src="./js/hw-N2.js"></script> -->
     <!-- <script src="./js/hw-N3.js"></script> -->
-    <script src="./js/hw-N4.js"></script>
+    <!-- <script src="./js/hw-N4.js"></script> -->
+    <script src="./js/hw-N5.js"></script>
     <script src="./js/guessNum.js"></script>
+    <script src="./js/simpleArithmetic.js"></script>
 </body>
 </html>
