Сделаны 2 игры и задачи по JS

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Переверни текст</h3>
                         <p class="mini-games__text">Попробуй ввести текст, который будет перевернут.</p>
-                        <button class="mini-games__btn">Играть!</button>
+                        <button class="mini-games__btn" onclick="reverseText()">Играть!</button>
                     </div>
                     <img class="mini-games__img" src="./img/Game3.jpg" alt="Переверни текст">
                 </article>
@@ -146,7 +146,7 @@
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Викторина</h3>
                         <p class="mini-games__text">Отвечай на вопросы викторины с вариантами ответов.</p>
-                        <button class="mini-games__btn">Играть!</button>
+                        <button class="mini-games__btn" onclick="quiz()">Играть!</button>
                     </div>
                 </article>
                 <article id="gameFive" class="mini-games__game mini-games__game_rev">
@@ -179,8 +179,11 @@
     <!-- <script src="./js/hw-N2.js"></script> -->
     <!-- <script src="./js/hw-N3.js"></script> -->
     <!-- <script src="./js/hw-N4.js"></script> -->
-    <script src="./js/hw-N5.js"></script>
+    <!-- <script src="./js/hw-N5.js"></script> -->
+    <script src="./js/hw-N6.js"></script>
     <script src="./js/guessNum.js"></script>
     <script src="./js/simpleArithmetic.js"></script>
+    <script src="./js/reverseText.js"></script>
+    <script src="./js/quiz.js"></script>
 </body>
 </html>
