--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
     <!-- <script src="./js/hw-N3.js"></script> -->
     <!-- <script src="./js/hw-N4.js"></script> -->
     <!-- <script src="./js/hw-N5.js"></script> -->
-    <script src="./js/hw-N6.js"></script>
+    <!-- <script src="./js/hw-N6.js"></script> -->
+    <script src="./js/hw-N7.js"></script>
     <script src="./js/guessNum.js"></script>
     <script src="./js/simpleArithmetic.js"></script>
     <script src="./js/reverseText.js"></script>
     <script src="./js/quiz.js"></script>
+    <script src="./js/rockScissorsPaper.js"></script>
 </body>
 </html>
