--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="mini-games__box">
                         <h3 class="mini-games__title">Камень, ножницы, бумага</h3>
                         <p class="mini-games__text">Сыграй в популярную игру против компьютера.</p>
-                        <button class="mini-games__btn">Играть!</button>
+                        <button class="mini-games__btn" onclick="rockScissorsPaper()">Играть!</button>
                     </div>
                     <img class="mini-games__img" src="./img/Game5.jpg" alt="Камень, ножницы, бумага">
                 </article>
